--- a/BrightID/android/app/src/main/res/values/strings.xml
+++ b/BrightID/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">BrightID</string>
+    <string name="asset_statements" translatable="false">
+    [{
+        \"include\": \"https://explorer.brightid.org/.well-known/assetlinks.json\"
+    }]
+    </string>
 </resources>
