[f/562-i18n] Translations : Pending connections

--- a/BrightID/translations/english.json
+++ b/BrightID/translations/english.json
@@ -10,7 +10,6 @@
   "home.link.community": "Join the Community",
   "home.chatActionSheet.title": "Like to chat with us?",
   "home.chatActionSheet.discord": "BrightID Discord",
-  "home.accessibilityLabel.userPhoto": "user photo",
   "home.accessibilityLabel.connect": "connect",
   
 
@@ -65,6 +64,33 @@
   "qrcode.text.confirmConnections": "Confirm Connections",
   
 
+  "connections.text.waitingConfirmation": "Waiting for {{name}} to confirm ...",
+  "connections.text.zeroPendingConnections": "Waiting for more connections",
+  "connections.text.pendingConnections": "Waiting for {{name}} to confirm you.",
+  "connections.text.pendingConnections_plural": "Waiting for {{count}} connections to confirm you.",
+  "connections.button.returnHome": "Return Home",
+  "connections.text.errorGeneric": "There was an error, please try connecting with {{name}} again...",
+  "connections.text.errorMyself": "OOPS!!! This is you...",
+  "connections.text.errorExpired": "The QRCode used to connect with {{name}} has expired... please try connecting again.",
+  "connections.text.waiting": "Waiting for data from the profile service",
+  "connections.text.connectWith": "Connect with?",
+  "connections.tag.connectionDate": "Created {{date}}",
+  "connections.tag.newUser": "New User",
+  "connections.tag.flagged": "(flagged)",
+  "connections.tag.alreadyConnected": "(already connected)",
+  "connections.label.connections": "Connections",
+  "connections.label.groups": "Groups",
+  "connections.label.mutualConnections": "Mutual Connec...",
+  "connections.button.ignore": "Ignore",
+  "connections.button.reject": "Reject",
+  "connections.button.updateProfile": "Update Profile",
+  "connections.button.confirm": "Confirm",
+  "connections.alert.title.expired": "Try connecting again...",
+  "connections.alert.text.expired": "The QRCode used to connect has expired...",
+  "connections.accessibilityLabel.reject": "reject connection with {{name}}",
+  "connections.accessibilityLabel.confirm": "accept connection with {{name}}",
+
+
   "common.alert.formIncomplete": "BrightID Form Incomplete",
   "common.photoActionSheet.title": "Select photo",
   "common.photoActionSheet.takePhoto": "Take Photo",
@@ -72,6 +98,7 @@
   "common.actionSheet.cancel": "cancel",
   "common.accessibilityLabel.editName": "edit name",
   "common.accessibilityLabel.editPhoto": "edit photo",
+  "common.accessibilityLabel.userPhoto": "user photo",
   "common.button.copy": "Copy",
   "common.camera.title": "Permission to use camera",
   "common.camera.message": "We need your permission to use your camera",
