--- a/BrightID/translations/french.json
+++ b/BrightID/translations/french.json
@@ -10,8 +10,8 @@
   "home.link.community": "Rejoindre la Communauté",
   "home.chatActionSheet.title": "Envie de discuter avec nous ?",
   "home.chatActionSheet.discord": "Discord BrightID",
-  "home.accessibilityLabel.userPhoto": "photo de l'utilisateur",
   "home.accessibilityLabel.connect": "se connecter",
+
 
   "onboarding.text.intro": "<text>BrightID utilise les personnes</text><text> que vous connaissez</text><text>pour assurer qu'il n'existe</text><text>qu'un seul compte par personne pour les usages important</text><text>tels que le vote et le revenu de base.</text>",
   "onboarding.label.maintainPrivacy": "Préservez votre vie privée",
@@ -64,6 +64,33 @@
   "qrcode.text.confirmConnections": "Confirmation des connexions",
 
 
+  "connections.text.waitingConfirmation": "En attente de confirmation de {{name}}...",
+  "connections.text.zeroPendingConnections": "En attente de connexions",
+  "connections.text.pendingConnections": "En attente de confirmation de {{name}}.",
+  "connections.text.pendingConnections_plural": "En attente de confirmation de {{count}} connexions.",
+  "connections.button.returnHome": "Retour à l'Accueil",
+  "connections.text.errorGeneric": "Une erreur est survenue, veuillez essayer à nouveau de vous connecter avec {{name}}...",
+  "connections.text.errorMyself": "OUPS!!! On dirait que c'est vous...",
+  "connections.text.errorExpired": "Le code QR utilisé pour vous connecter avec {{name}} a expiré... veuillez réessayer de vous connecter.",
+  "connections.text.waiting": "En attente de données du service de profiles",
+  "connections.text.connectWith": "Vous connecter avec ?",
+  "connections.tag.connectionDate": "Créé {{date}}",
+  "connections.tag.newUser": "Nouvel Utilisateur",
+  "connections.tag.flagged": "(signalé)",
+  "connections.tag.alreadyConnected": "(déjà connecté)",
+  "connections.label.connections": "Connexions",
+  "connections.label.groups": "Groupes",
+  "connections.label.mutualConnections": "En commun",
+  "connections.button.ignore": "Ignorer",
+  "connections.button.reject": "Refuser",
+  "connections.button.updateProfile": "Mettre à jour",
+  "connections.button.confirm": "Confirmer",
+  "connections.alert.title.expired": "Réessayez de vous connecter...",
+  "connections.alert.text.expired": "Le code QR utilisé pour vous connecter a expiré...",
+  "connections.accessibilityLabel.reject": "refuser la connexion avec {{name}}",
+  "connections.accessibilityLabel.confirm": "accepter la connexion avec {{name}}",
+
+
   "common.alert.formIncomplete": "Formulaire incomplet",
   "common.photoActionSheet.title": "Sélectionner une photo",
   "common.photoActionSheet.takePhoto": "Prendre une Photo",
@@ -71,6 +98,7 @@
   "common.actionSheet.cancel": "annuler",
   "common.accessibilityLabel.editName": "éditer le nom",
   "common.accessibilityLabel.editPhoto": "éditer la photo",
+  "common.accessibilityLabel.userPhoto": "photo de l'utilisateur",
   "common.button.copy": "Copier",
   "common.camera.title": "Permission d'utiliser l'appareil photo",
   "common.camera.message": "Nous avons besoin de votre permission pour utiliser l'appareil photo",
