--- a/BrightID/translations/english.json
+++ b/BrightID/translations/english.json
@@ -30,7 +30,6 @@
   "signup.alert.nameMissing": "Please add your name",
   "signup.alert.nameTooShort": "Your name must be at least 2 characters",
   "signup.alert.photoMissing": "A photo is required. Please press enter on the keyboard.",
-  "signup.accessibilityLabel.addPhoto": "add photo",
 
 
   "recovery.header.title": "Recovery Code",
@@ -74,9 +73,7 @@
   "connections.text.errorExpired": "The QRCode used to connect with {{name}} has expired... please try connecting again.",
   "connections.text.waiting": "Waiting for data from the profile service",
   "connections.text.connectWith": "Connect with?",
-  "connections.tag.connectionDate": "Created {{date}}",
   "connections.tag.newUser": "New User",
-  "connections.tag.flagged": "(flagged)",
   "connections.tag.alreadyConnected": "(already connected)",
   "connections.label.connections": "Connections",
   "connections.label.groups": "Groups",
@@ -91,17 +88,62 @@
   "connections.accessibilityLabel.confirm": "accept connection with {{name}}",
 
 
+  "groups.title.groups": "Groups",
+  "groups.title.newGroup": "New Group",
+  "groups.text.noGroups": "<text>Get verified faster</text><text>by creating and</text><text>joining groups</text>",
+  "groups.text.noGroupsMatchSearch": "No group matches your search",
+  "groups.button.learnMore": "Learn More",
+  "groups.button.createGroup": "Create Group",
+  "groups.text.waitingForMembers": "Waiting for {{list}} to join",
+  "groups.tag.primaryGroup": "Primary Group",
+  "groups.label.knownMembers": "Known members:",
+  "groups.label.unknownMembers": "Unknown:",
+  "groups.text.noMembers": "No known members, invite some...",
+  "groups.text.noEligibleConnection": "No existing connections are eligible for this group, please come back later..",
+  "groups.alert.title.inviteSuccess": "Successful Invitation",
+  "groups.alert.text.inviteSuccess":"You invited {{name}} successfully to the group",
+  "groups.alert.title.leaveGroup": "Leave Group",
+  "groups.alert.text.leaveGroup": "Are you sure you want to leave this group?",
+  "groups.alert.title.errorLeaveGroup": "Error leaving group",
+  "groups.alert.title.dismissMember": "Dismiss Member",
+  "groups.alert.text.dismissMember": "Are you sure you want to dismiss {{name}} from this group?",
+  "groups.alert.title.errorDismissMember": "Error dismissing member from the group",
+  "groups.alert.title.addAdmin": "Add admin",
+  "groups.alert.text.addAdmin": "Are you sure you want to make {{name}} an admin for this group?",
+  "groups.alert.text.errorAddAdmin": "Error making {{name}} admin for group",
+  "groups.accessibilityLabel.groupsLogo": "groups logo",
+
+
+  "createGroup.placeholder.groupName": "What is the group name?",
+  "createGroup.button.next": "Next",
+  "createGroup.label.cofounders": "CO-FOUNDERS",
+  "createGroup.text.cofounders": "To create a group, you must select two co-founders",
+  "createGroup.text.noConnections": "No connections",
+  "createGroup.button.createGroup": "Create Group",
+  "createGroup.alert.title.formIncomplete": "Group Form Incomplete",
+  "createGroup.alert.text.nameMissing": "Please add a name for group",
+  "createGroup.alert.text.nameTooShort": "The group name must be at least 2 characters",
+
+
+  "common.alert.error": "Error",
   "common.alert.formIncomplete": "BrightID Form Incomplete",
+  "common.alert.ok": "OK",
+  "common.alert.cancel": "Cancel",
   "common.photoActionSheet.title": "Select photo",
   "common.photoActionSheet.takePhoto": "Take Photo",
   "common.photoActionSheet.choosePhoto": "Choose From Library",
   "common.actionSheet.cancel": "cancel",
+  "common.actionSheet.title": "What do you want to do?",
   "common.accessibilityLabel.editName": "edit name",
+  "common.accessibilityLabel.addPhoto": "add photo",
   "common.accessibilityLabel.editPhoto": "edit photo",
   "common.accessibilityLabel.userPhoto": "user photo",
   "common.button.copy": "Copy",
   "common.camera.title": "Permission to use camera",
   "common.camera.message": "We need your permission to use your camera",
   "common.camera.ok": "Ok",
-  "common.camera.cancel": "Cancel"
+  "common.camera.cancel": "Cancel",
+  "common.tag.flagged": "(flagged)",
+  "common.tag.connectionDate": "Connected {{date}}",
+  "common.language.and": "and"
 }
