--- a/BrightID/translations/french.json
+++ b/BrightID/translations/french.json
@@ -30,7 +30,6 @@
   "signup.alert.nameMissing": "Veuillez renseigner votre nom",
   "signup.alert.nameTooShort": "Votre nom doit contenir au moins 2 caractères",
   "signup.alert.photoMissing": "Une photo est requise",
-  "signup.accessibilityLabel.addPhoto": "Ajouter une photo",
 
 
   "recovery.header.title": "Code de Restauration",
@@ -74,9 +73,7 @@
   "connections.text.errorExpired": "Le code QR utilisé pour vous connecter avec {{name}} a expiré... veuillez réessayer de vous connecter.",
   "connections.text.waiting": "En attente de données du service de profiles",
   "connections.text.connectWith": "Vous connecter avec ?",
-  "connections.tag.connectionDate": "Créé {{date}}",
   "connections.tag.newUser": "Nouvel Utilisateur",
-  "connections.tag.flagged": "(signalé)",
   "connections.tag.alreadyConnected": "(déjà connecté)",
   "connections.label.connections": "Connexions",
   "connections.label.groups": "Groupes",
@@ -91,17 +88,62 @@
   "connections.accessibilityLabel.confirm": "accepter la connexion avec {{name}}",
 
 
+  "groups.title.groups": "Groupes",
+  "groups.title.newGroup": "Nouveau Groupe",
+  "groups.text.noGroups": "<text>Devenez vérifié plus facilement</text><text>en créant et</text><text>rejoignant des groupes</text>",
+  "groups.text.noGroupsMatchSearch": "Aucun groupe ne correspond à votre recherche",
+  "groups.button.learnMore": "Informations",
+  "groups.button.createGroup": "Créer un Groupe",
+  "groups.text.waitingForMembers": "En attente de validation de {{list}}",
+  "groups.tag.primaryGroup": "Groupe Principal",
+  "groups.label.knownMembers": "Membres connus :",
+  "groups.label.unknownMembers": "Inconnus :",
+  "groups.text.noMembers": "Pas de membre connu, invitez quelqu'un...",
+  "groups.text.noEligibleConnection": "Aucune connexion existante n'est éligible pour ce groupe. Veuillez réessayer plus tard...",
+  "groups.alert.title.inviteSuccess": "Invitation Envoyée",
+  "groups.alert.text.inviteSuccess":"Vous avez invité {{name}} avec succès",
+  "groups.alert.title.leaveGroup": "Quitter le Groupe",
+  "groups.alert.text.leaveGroup": "Êtes-vous sûr de vouloir quitter ce groupe ?",
+  "groups.alert.title.errorLeaveGroup": "Erreur en quittant le groupe",
+  "groups.alert.title.dismissMember": "Retirer le Membre",
+  "groups.alert.text.dismissMember": "Êtes-vous sûr de vouloir retirer {{name}} de ce groupe ?",
+  "groups.alert.title.errorDismissMember": "Erreur en essayant de retirer {{name}} du groupe",
+  "groups.alert.title.addAdmin": "Définir comme administrateur",
+  "groups.alert.text.addAdmin": "Êtes-vous sûr de vouloir définir {{name}} comme administrateur de ce groupe ?",
+  "groups.alert.text.errorAddAdmin": "Erreur en essayant de définir {{name}} comme administrateur du groupe",
+  "groups.accessibilityLabel.groupsLogo": "logo pour les groupes",
+
+
+  "createGroup.placeholder.groupName": "Quel est le nom du groupe ?",
+  "createGroup.button.next": "Suivant",
+  "createGroup.label.cofounders": "COFONDATEURS",
+  "createGroup.text.cofounders": "Pour créer un groupe, vous devez sélectionner deux cofondateurs",
+  "createGroup.text.noConnections": "Vous n'avez pas de connexions",
+  "createGroup.button.createGroup": "Créer le Groupe",
+  "createGroup.alert.title.formIncomplete": "Formulaire incomplet",
+  "createGroup.alert.text.nameMissing": "Veuillez entrer un nom pour le groupe",
+  "createGroup.alert.text.nameTooShort": "Le nom du groupe doit contenir au moins 2 caractères",
+
+
+  "common.alert.error": "Erreur",
   "common.alert.formIncomplete": "Formulaire incomplet",
+  "common.alert.ok": "OK",
+  "common.alert.cancel": "Annuler",
   "common.photoActionSheet.title": "Sélectionner une photo",
   "common.photoActionSheet.takePhoto": "Prendre une Photo",
   "common.photoActionSheet.choosePhoto": "Sélectionner depuis l'Album",
   "common.actionSheet.cancel": "annuler",
+  "common.actionSheet.title": "Que souhaitez-vous faire ?",
   "common.accessibilityLabel.editName": "éditer le nom",
+  "common.accessibilityLabel.addPhoto": "Ajouter une photo",
   "common.accessibilityLabel.editPhoto": "éditer la photo",
   "common.accessibilityLabel.userPhoto": "photo de l'utilisateur",
   "common.button.copy": "Copier",
   "common.camera.title": "Permission d'utiliser l'appareil photo",
   "common.camera.message": "Nous avons besoin de votre permission pour utiliser l'appareil photo",
   "common.camera.ok": "Ok",
-  "common.camera.cancel": "Annuler"
+  "common.camera.cancel": "Annuler",
+  "common.tag.flagged": "(signalé)",
+  "common.tag.connectionDate": "Connecté {{date}}",
+  "common.language.and": "et"
 }
